<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/TextLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            style="@style/LabelText"
            android:text="@string/label_height_imperial"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/FeetInchEditText"
                android:id="@+id/et_feet"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/et_inches"
                />
            <TextView
                style="@style/LabelText"
                android:labelFor="@+id/et_feet"
                android:text="@string/label_feet"
                />
            <EditText
                style="@style/FeetInchEditText"
                android:id="@+id/et_inches"
                android:inputType="numberDecimal"
                />
            <TextView
                style="@style/LabelText"
                android:labelFor="@+id/et_inches"
                android:text="@string/label_inches"
                />
        </LinearLayout>

        <TextView
            style="@style/LabelText"
            android:text="@string/label_weight_imperial"
            android:labelFor="@+id/et_weight"
            />
        <EditText
            style="@style/EditText"
            android:id="@+id/et_weight"
            android:inputType="numberDecimal"
            />

        <Button
            style="@style/Button"
            android:id="@+id/bt_calculate"
            android:text="@string/calculate_bmi"
            android:background="@color/btn"

            />

        <TextView
            style="@style/ResultText"
            android:id="@+id/tv_result"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
